--- a/doc/agile/sprint_backlog_96.org
+++ b/doc/agile/sprint_backlog_96.org
@@ -13,38 +13,38 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-01-28 Sat 20:16]
+#+CAPTION: Clock summary at [2017-01-28 Sat 21:39]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *77:51* |       |       | 100.0 |
+| *Total time*                                                                | *78:49* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 77:51   |       |       | 100.0 |
-| Active                                                                      |         | 77:51 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  4:21 |   5.6 |
+| Stories                                                                     | 78:49   |       |       | 100.0 |
+| Active                                                                      |         | 78:49 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  4:21 |   5.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:35 |   0.7 |
 | COMPLETED Add test in knit to validate upsilon                              |         |       |  0:51 |   1.1 |
-| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  13.2 |
+| COMPLETED Create an upsilon yarn frontend                                   |         |       | 10:18 |  13.1 |
 | COMPLETED Fields with collections in upsilon cause errors                   |         |       |  1:20 |   1.7 |
 | COMPLETED Bind language to kernel                                           |         |       |  1:29 |   1.9 |
 | COMPLETED Upsilon can have collections of collections                       |         |       |  1:01 |   1.3 |
 | COMPLETED Upsilon test borked due to no output                              |         |       |  0:21 |   0.4 |
-| COMPLETED Add multi-language support                                        |         |       | 13:28 |  17.3 |
-| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   8.1 |
+| COMPLETED Add multi-language support                                        |         |       | 13:28 |  17.1 |
+| COMPLETED Add a type mapper                                                 |         |       |  6:19 |   8.0 |
 | COMPLETED Backslashes in strings cause JSON parsing to fail                 |         |       |  0:49 |   1.0 |
 | COMPLETED Add log-level to command line                                     |         |       |  1:20 |   1.7 |
 | COMPLETED Fix recursive path lookup for upsilon                             |         |       |  1:02 |   1.3 |
 | COMPLETED In JSON hydrator rename simple name to simple                     |         |       |  1:03 |   1.3 |
 | COMPLETED Add tailor support for upsilon                                    |         |       |  0:16 |   0.3 |
-| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   6.1 |
+| COMPLETED Add support for pointers to mapper in upsilon                     |         |       |  4:44 |   6.0 |
 | COMPLETED Discuss the current approach with end users                       |         |       |  1:31 |   1.9 |
 | COMPLETED Rename primitives to built-in                                     |         |       |  2:20 |   3.0 |
-| STARTED Create a new yarn type for primitives                               |         |       |  9:19 |  12.0 |
+| STARTED Create a new yarn type for primitives                               |         |       |  9:19 |  11.8 |
 | STARTED Add mapping support between upsilon and LAM                         |         |       |  1:56 |   2.5 |
 | STARTED Make the Zeta model compilable                                      |         |       |  0:45 |   1.0 |
-| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |   8.9 |
+| STARTED Add support for Language Agnostic Models (LAM)                      |         |       |  6:55 |   8.8 |
 | STARTED Map upsilon primitives to intrinsics                                |         |       |  3:04 |   3.9 |
-| STARTED Add support for configurable enumerations types                     |         |       |  2:44 |   3.5 |
+| STARTED Add support for configurable enumerations types                     |         |       |  3:42 |   4.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -887,6 +887,7 @@ Finally, the last option may be to have yet another mapping data file
 format that lists the primitives to unbox.
 
 *** STARTED Add support for configurable enumerations types           :story:
+    CLOCK: [2017-01-28 Sat 20:41]--[2017-01-28 Sat 21:39] =>  0:58
     CLOCK: [2017-01-28 Sat 19:09]--[2017-01-28 Sat 20:16] =>  1:07
     CLOCK: [2017-01-28 Sat 18:53]--[2017-01-28 Sat 19:08] =>  0:15
     CLOCK: [2017-01-28 Sat 17:30]--[2017-01-28 Sat 18:52] =>  1:22
